--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,13 +1,13 @@
-name: Terraform Plan
-on: push
+name: Terraform Apply
+on: workflow_dispatch
 env:
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
   AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
   TF_VAR_aws_key_pub: ${{secrets.TF_VAR_aws_key_pub}}
 
 jobs:
-  terraform_plan:
-    name: Terraform Plan
+  terraform_apply:
+    name: Terraform Apply
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -15,10 +15,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-    - name: Terraform Plan
+    - name: Terraform Apply
       run: |
         terraform init
-        terraform validate
-        terraform plan
+        terraform apply -auto-approve
 
 
