--- a/.github/workflows/terraform-plan2.yml
+++ b/.github/workflows/terraform-plan2.yml
@@ -1,13 +1,13 @@
-name: Terraform Apply
-on: workflow_dispatch
+name: Terraform Plan
+on: push
 env:
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
   AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
   TF_VAR_aws_key_pub: ${{secrets.TF_VAR_aws_key_pub}}
 
 jobs:
-  terraform_apply:
-    name: Terraform Apply
+  terraform_plan:
+    name: Terraform Plan
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -15,9 +15,10 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-    - name: Terraform Apply
+    - name: Terraform Plan
       run: |
         terraform init
-        terraform plan -auto-approve
+        terraform validate
+        terraform plan
 
 
